[package]
name = "atticus"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.4", features = ["blocking"] }
floem = { path = "../floem" }
tokio = { version = "1.37.0", features = ["full"] }
crossbeam = "0.8.4"
crossbeam-channel = "0.5.13"
im = "15.1.0"
serde_json = "1.0.120"
strum = { version = "0.26.3", features = ["derive"] }
