[package]
name = "atticus"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.4", features = ["blocking"] }
floem = { git = "https://github.com/lapce/floem" }
tokio = { version = "1.37.0", features = ["full"] }
crossbeam = "0.8.4"
crossbeam-channel = "0.5.13"
im = { version = "15.1.0", features = ["serde"] }
serde_json = "1.0.120"
strum = { version = "0.26.3", features = ["derive"] }
serde = { version = "1.0.204", features = ["derive"] }
jsonformat = "2.0.0"
